Fixed up dice-roller and event log form alignment

--- a/client/assets/scss/_inbox.scss
+++ b/client/assets/scss/_inbox.scss
@@ -18,7 +18,7 @@
 }
 
 .grid-lines {
-  background: url(../images/assets/grid-tile.png) repeat;
+  background: url(../assets/images/assets/grid-tile.png) repeat;
   position: absolute;
   top: 0;
   bottom: 0;
